# spotinator

./: pyproject.toml
src/spotinator/llm/: lc_model.py
src/spotinator/log/: __init__.py
src/spotinator/mcp_server/: spotify_server.py
src/spotinator/models/: __init__.py  log_entry.py
src/spotinator/routes/: __init__.py  spotify_routes.py
